WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294449
[macOS] Unable to pause video playback in PiP mode
https://bugs.webkit.org/show_bug.cgi?id=294449
Summary
[macOS] Unable to pause video playback in PiP mode
Jer Noble
Reported
2025-06-13 11:34:02 PDT
[macOS] Unable to pause video playback in PiP mode
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-06-13 11:34:03 PDT
<
rdar://problem/152192112
>
Jer Noble
Comment 2
2025-06-13 11:36:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46718
EWS
Comment 3
2025-06-13 20:48:04 PDT
Committed
296219@main
(f3a0304bc66c): <
https://commits.webkit.org/296219@main
> Reviewed commits have been landed. Closing PR #46718 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug