[macOS] Unable to pause video playback in PiP mode rdar://152192112 https://bugs.webkit.org/show_bug.cgi?id=294449

Reviewed by Eric Carlson.

From logging, it appears that the playback state of the WebContent process is becoming
out-of-sync with the cached playback state in the UIProcess. Without knowing exactly how
this synchronization failed, work around the issue by explicitly updating the cached
playback state whenever a play() or pause() command is issued by the UIProcess.

* Source/WebCore/platform/cocoa/PlaybackSessionModel.h:
(WTF::LogArgument<OptionSet<WebCore::PlaybackSessionModel::PlaybackState>>::toString):
* Source/WebCore/platform/cocoa/PlaybackSessionModelMediaElement.h:
* Source/WebCore/platform/cocoa/PlaybackSessionModelMediaElement.mm:
(WebCore::PlaybackSessionModelMediaElement::updateForEventName):
(WebCore::PlaybackSessionModelMediaElement::play):
(WebCore::PlaybackSessionModelMediaElement::pause):
(WebCore::PlaybackSessionModelMediaElement::updateRate):
* Source/WebCore/platform/mac/PlaybackSessionInterfaceMac.mm:
(WebCore::PlaybackSessionInterfaceMac::rateChanged):
* Source/WebCore/platform/mac/VideoPresentationInterfaceMac.mm:
(WebCore::VideoPresentationInterfaceMac::rateChanged):

Canonical link: https://commits.webkit.org/296219@main